Modifikasi index.html, profile.html, serta penambahan deskripsi masing masing brand

--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -143,13 +143,19 @@
 
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../Images/3Didaw.jpg" alt="Gambar 1" />
+                <a href="3didaw.html">
+                  <img src="../Images/3Didaw.jpg" alt="Gambar 1"/>
+                </a>
               </div>
               <div class="carousel-item">
+                <a href="aborigin.html">
                 <img src="../Images/aborigin.jpg" alt="Gambar 2" />
+                </a>
               </div>
               <div class="carousel-item">
+                <a href="binarybite.html">
                 <img src="../Images/Binary.png" alt="Gambar 3" />
+                </a>
               </div>
             </div>
 
