--- a/Dashboard/profile.html
+++ b/Dashboard/profile.html
@@ -24,17 +24,30 @@
         .profile-picture-container {
             position: relative;
             display: inline-block;
+            margin-bottom: 20px;
         }
         .upload-button {
             position: absolute;
-            bottom: 0;
-            right: 0;
+            bottom: 10px;
+            right: 10px;
             background-color: #007bff;
             color: white;
             border: none;
             border-radius: 50%;
-            padding: 5px;
+            padding: 8px;
             cursor: pointer;
+            box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+        }
+        .form-group {
+            margin-bottom: 20px;
+        }
+        body {
+            font-family: Arial, sans-serif;
+        }
+        footer {
+            margin-top: 40px;
+            padding: 20px 0;
+            background-color: #f8f9fa;
         }
     </style>
 </head>
@@ -50,16 +63,18 @@
     <div class="container mt-5 pt-5">
         <h1 class="text-center mb-4">Edit Profil Saya</h1>
         <div class="row justify-content-center">
-            <div class="col-md-6 text-center">
+            <div class="col-md-4 text-center">
                 <!-- Foto Profil -->
                 <div class="profile-picture-container">
                     <img id="profile-picture" class="profile-picture" src="https://via.placeholder.com/150" alt="Profile Picture">
                     <input type="file" id="profile-picture-input" style="display: none;" accept="image/*">
                     <button class="upload-button" onclick="document.getElementById('profile-picture-input').click()">
-                        <i class="fa fa-camera" style="width: 25px ;"></i>
+                        <i class="fa fa-camera" style="width: 25px;"></i>
                     </button>
                 </div>
             </div>
+        </div>
+        <div class="row justify-content-center">
             <div class="col-md-6">
                 <form id="profile-form">
                     <div class="form-group">
@@ -85,7 +100,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="text-center mt-5">
+    <footer class="text-center">
         <p>&copy; 2024 I-Click. All rights reserved.</p>
     </footer>
 
