--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -34,21 +34,21 @@
         margin-right: 15px;
       }
       .cart-link {
-        position: relative; /* Makes it the parent for the absolute-positioned badge */
+        position: relative; 
       }
 
       #cart-count {
-        position: absolute; /* Allows the badge to be positioned relative to the cart icon */
-        top: -10px; /* Adjusts the vertical position of the badge */
-        right: -10px; /* Adjusts the horizontal position */
+        position: absolute;
+        top: -10px; 
+        right: -10px;
         transform: translate(
           50%,
           -50%
-        ); /* Centers the badge in the top-right corner */
-        font-size: 12px; /* Adjusts the size of the badge */
-        padding: 4px 6px; /* Adjusts padding inside the badge */
-        border-radius: 50%; /* Ensures the badge is circular */
-        z-index: 10; /* Ensures it stays above the icon */
+        ); 
+        font-size: 12px; 
+        padding: 4px 6px; 
+        border-radius: 50%; 
+        z-index: 10;
       }
     </style>
   </head>
@@ -80,7 +80,6 @@
               <span id="cart-count" class="badge bg-danger" style="position: absolute; top: -1px; right: 10px;">0</span>
             </a>
             <div id="loginStateContainer">
-              <!-- Login state content -->
             </div>
           </div>
         </div>
@@ -89,9 +88,6 @@
 
     <!-- Hero Section -->
     <div class="container my-5">
-      <!-- <video autoplay muted loop play-inline class="back-video">
-        <source src="../Images/BgVideo.mp4" type="video/mp4">
-      </video> -->
       <div class="row hero-section p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center">
         <div class="col-lg-6 p-3 p-lg-5 pt-lg-3">
           <h1 class="display-4 fw-bold lh-1">
