Menambahkan fitur halaman checkout agar user bisa melakukan pembayaran

--- a/Dashboard/cart-page.html
+++ b/Dashboard/cart-page.html
@@ -49,7 +49,7 @@
         <!-- Cart Total -->
         <div class="d-flex justify-content-between align-items-center">
             <span class="cart-total">Total: <span id="cart-total-price">Rp 0</span></span>
-            <button id="checkout-btn" class="btn btn-success">Lanjutkan ke Pembayaran</button>
+            <button id="checkout-btn" class="btn btn-success" onclick="location.href='checkout.html'">Lanjutkan ke Pembayaran</button>
         </div>
     </div>
 
