--- a/Dashboard/product-detail.html
+++ b/Dashboard/product-detail.html
@@ -10,6 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="stylesheet" href="../style/style.css"/>
+    <script type="text/javascript"
+		src="https://app.stg.midtrans.com/snap/snap.js"
+    data-client-key="SB-Mid-client-pkORmHJnQnn4rzQB"></script>
     <style>
         .navbar {
               background-color: white !important;
