--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homepage</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/> -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
     <link
@@ -16,164 +13,215 @@
     />
     <script src="https://unpkg.com/feather-icons"></script>
     <link rel="stylesheet" href="../style/style.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <style>
-      .navbar {
-        background-color: #0073b7;
-        border-bottom: 1px solid ;
-      }
-      .navbar-brand {
-        font-weight: 500;
-      }
-      .nav-link .bi-cart {
-        font-size: 24px;
-        margin-right: 15px;
-      }
+    body, html {
+    height: 100%;
+    margin: 0;
+    }
 
-      .nav-link .bi-heart {
-        font-size: 24px;
-        margin-right: 15px;
-      }
-      .cart-link {
-        position: relative; 
-      }
+    .navbar {
+    background-color: #03045E !important;
+    border-bottom: 1px solid;
+    z-index: 1000;
+    }
 
-      #cart-count {
-        position: absolute;
-        top: -10px; 
-        right: -10px;
-        transform: translate(
-          50%,
-          -50%
-        ); 
-        font-size: 12px; 
-        padding: 4px 6px; 
-        border-radius: 50%; 
-        z-index: 10;
-      }
-      #add-to-cart {
-        font-size: 12px;
-        padding: 5px 10px; 
-      }
-    </style>
-  </head>
-  <body>
+    /* Full height loading screen */
+    .container-fluid {
+    background-color: #03045E; /* Warna latar belakang sama dengan navbar */
+    height: 100vh;
+    display: flex;
+    flex-direction: column; /* Menyusun logo dan loading bar secara vertikal */
+    justify-content: center;
+    align-items: center;
+    position: fixed; /* Menutupi seluruh halaman */
+    top: 0;
+    left: 0;
+    z-index: 9999; /* Menempatkan loading screen di atas konten lain */
+    }
 
+    /* Logo */
+    .logo {
+    max-width: 300px; /* Ukuran besar logo */
+    width: 100%;
+    animation: fadeUpAnimation 1s forwards; /* Menambahkan animasi fade-up */
+    }
 
-    <nav
-      class="navbar navbar-expand-lg navbar-light bg-white border-bottom fixed-top"
-    >
-      <div class="container">
-        <a class="navbar-brand" href="#">I-Click</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarContent"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    /* Loading Bar */
+    .loading-bar-container {
+    width: 80%; /* Lebar kontainer untuk loading bar */
+    height: 12px; /* Lebar loading bar lebih besar dari sebelumnya */
+    background-color: rgba(255, 255, 255, 0.3); /* Warna latar belakang loading bar */
+    margin-top: 20px; /* Jarak antara logo dan loading bar */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
 
-        <div class="collapse navbar-collapse" id="navbarContent">
-          <div class="d-flex align-items-center ms-auto">
+    .loading-bar {
+    height: 100%;
+    background-color: #ffffff; /* Warna loading bar */
+    width: 0%; /* Awal loading bar */
+    transition: width 3s ease-out; /* Progres loading bar selesai dalam 3 detik */
+    }
 
-            <a href="wishlist.html" class="nav-link me-3 wishlist-link">
-              <i class="bi bi-heart"></i>
-            </a>
-            <a href="cart-page.html" class="nav-link me-3 cart-link">
-              <i class="bi bi-cart"></i>
-              <span id="cart-count" class="badge bg-danger" style="position: absolute; top: -1px; right: 10px;">0</span>
-            </a>
-            <div id="loginStateContainer">
-            </div>
-          </div>
-        </div>
-      </div>
-    </nav>
+    /* Animasi untuk menghilangkan loading screen */
+    .fade-out {
+    animation: fadeOutAnimation 1s forwards;
+    }
 
-    <!-- Hero Section -->
-    <div class="container my-5">
-      <div class="row hero-section p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center">
-        <div class="col-lg-6 p-3 p-lg-5 pt-lg-3">
-          <h1 class="display-4 fw-bold lh-1">
-            Selamat Datang di I-Click Official Store
-          </h1>
-          <h2 class="display-8 fw-bold lh-4">
-            Partner of <span id="typed-text"></span>
-          </h2>
+    @keyframes fadeOutAnimation {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+    }
 
-          <p class="lead">
-            Temukan berbagai produk berkualitas dengan harga terbaik. Belanja
-            mudah, aman, dan terpercaya.
-          </p>
-          <div
-            class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3"
-          >
-            <button
-              type="button"
-              class="btn btn-primary btn-lg px-4 me-md-2 fw-bold"
-            >
-              <a href="#products">Belanja Sekarang</a>
-            </button>
-          </div>
-        </div>
-        <div data-aos="zoom-in" class="col-lg-5 p-0 hero-image-container">
-          <div
-            id="heroCarousel"
-            class="carousel slide hero-carousel"
-            data-bs-ride="carousel"
-          >
-            <div class="carousel-indicators">
-              <button
-                type="button"
-                data-bs-target="#heroCarousel"
-                data-bs-slide-to="0"
-                class="active"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#heroCarousel"
-                data-bs-slide-to="1"
-              ></button>
-              <button
-                type="button"
-                data-bs-target="#heroCarousel"
-                data-bs-slide-to="2"
-              ></button>
-            </div>
+    /* Animasi untuk logo muncul (fade-up) */
+    @keyframes fadeUpAnimation {
+    0% {
+        opacity: 0;
+        transform: translateY(20px); /* Mulai dari bawah */
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0); /* Pindah ke posisi semula */
+    }
+    }
 
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="../Images/3Didaw.jpg" alt="Gambar 1" />
-              </div>
-              <div class="carousel-item">
-                <img src="../Images/aborigin.jpg" alt="Gambar 2" />
-              </div>
-              <div class="carousel-item">
-                <img src="../Images/Binary.png" alt="Gambar 3" />
-              </div>
-            </div>
+    /* Konten utama setelah loading screen menghilang */
+    .main-content {
+    display: none;
+    }
 
-            <button
-              class="carousel-control-prev"
-              type="button"
-              data-bs-target="#heroCarousel"
-              data-bs-slide="prev"
-            >
-              <span class="carousel-control-prev-icon"></span>
-            </button>
-            <button
-              class="carousel-control-next"
-              type="button"
-              data-bs-target="#heroCarousel"
-              data-bs-slide="next"
-            >
-              <span class="carousel-control-next-icon"></span>
-            </button>
+    .carousel-image {
+    transition: transform 0.3s ease, opacity 0.3s easce;
+    cursor: pointer; /* Mengubah kursor menjadi tangan saat hover */
+  }
+
+  .carousel-image:hover {
+    transform: scale(1.05); /* Membesarkan gambar sedikit saat hover */
+    opacity: 0.8; /* Mengubah transparansi gambar untuk efek lebih halus */
+  }
+
+  </style>
+</head>
+<body>
+
+ <!-- Navbar -->
+ <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#"><img src="../Images/group 1.png" alt=""
+        style="width: 120px;"></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarContent"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarContent">
+        <div class="d-flex align-items-center ms-auto">
+
+          <a href="wishlist.html" class="nav-link me-3 wishlist-link">
+            <i class="bi bi-heart" style="color: aliceblue;"></i>
+          </a>
+          <a href="cart-page.html" class="nav-link me-3 cart-link">
+            <i class="bi bi-cart" style="color: aliceblue;"></i>
+            <span id="cart-count" class="badge bg-danger" style="position: absolute; top: -1px; right: 10px;">0</span>
+          </a>
+          <div id="loginStateContainer">
+            <!-- Login state content -->
           </div>
         </div>
       </div>
     </div>
+    </nav>
 
+  
+  <!-- Full Page Loading Screen -->
+  <div data-aos="fade-down"
+    id="loading-screen" class="container-fluid">
+    <img src="../Images/group 1.png" alt="Logo" class="logo" id="logo">
+    <div class="loading-bar-container">
+      <div class="loading-bar" id="loading-bar"></div>
+    </div>
+  </div>
+  
+  
+    
+
+   <!-- Hero Section -->
+<div class="container my-5">
+    <div class="row hero-section p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center">
+      <div class="col-lg-6 p-3 p-lg-5 pt-lg-3">
+        <h1 class="display-4 fw-bold lh-1">
+          Selamat Datang di I-Click Official Store
+        </h1>
+        <h2 class="display-8 fw-bold lh-4">
+          Partner of <span id="typed-text"></span>
+        </h2>
+  
+        <p class="lead">
+          Temukan berbagai produk berkualitas dengan harga terbaik. Belanja
+          mudah, aman, dan terpercaya.
+        </p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
+          <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">
+            <a href="#products">Belanja Sekarang</a>
+          </button>
+        </div>
+      </div>
+      <div data-aos="zoom-in" class="col-lg-5 p-0 hero-image-container">
+        <div id="heroCarousel" class="carousel slide hero-carousel" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="2"></button>
+          </div>
+  
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="../Images/3Didaw.png" alt="Gambar 1" class="carousel-image" />
+            </div>
+            <div class="carousel-item">
+              <img src="../Images/aborigin.png" alt="Gambar 2" class="carousel-image" />
+            </div>
+            <div class="carousel-item">
+              <img src="../Images/Binary.png" alt="Gambar 3" class="carousel-image" />
+            </div>
+          </div>
+  
+          <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Modal untuk Deskripsi Gambar -->
+  <div class="modal fade" id="imageDescriptionModal" tabindex="-1" aria-labelledby="imageDescriptionModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="imageDescriptionModalLabel">Deskripsi Gambar</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p id="imageDescription">Deskripsi panjang gambar akan muncul di sini.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  
     <!-- Daftar Isi Produk -->
     <div class="bgproduk">
     <section id="products" class="container my-5">
@@ -730,8 +778,9 @@
       </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <script src="../Script/script.js"></script>
     <script src="../Script/nav.js"></script>
     <script src="../Script/img.js"></script>
@@ -739,6 +788,89 @@
     <script src="../Script/handler.js"></script>
     <script src="../Script/Shopping-cart.js"></script>
     <script src="../Script/cart-page.js"></script>
+    <script>
+        AOS.init();
+      </script>
+
+<!-- JavaScript untuk menangani klik gambar dan menampilkan modal dengan judul dan deskripsi yang berbeda -->
+<script>
+    // Menangani klik pada gambar carousel
+    document.querySelectorAll('.carousel-image').forEach((img, index) => {
+      img.addEventListener('click', () => {
+        let titleText = '';
+        let descriptionText = '';
+  
+        // Menentukan judul dan deskripsi untuk masing-masing gambar
+        switch (index) {
+          case 0:
+            titleText = 'Apa Itu 3DiDAW?';
+            descriptionText = '3DiDAW adalah platform inovatif untuk menciptakan konten 3D yang interaktif dan dinamis. ' +
+                              'Inovasi di Dunia 3D\n3DiDAW mempermudah pengembang dan desainer untuk membuat model 3D dengan fitur-fitur canggih yang mendukung kreativitas. ' +
+                              'Dengan 3DiDAW, Anda dapat menciptakan visual yang menakjubkan untuk berbagai keperluan, mulai dari animasi, arsitektur, hingga aplikasi VR. ' +
+                              'Fitur Utama:\n- Antarmuka yang ramah pengguna\n- Rendering real-time\n- Integrasi dengan berbagai alat desain';
+            break;
+          case 1:
+            titleText = 'Apa Itu The Aborigin?';
+            descriptionText = 'The Aborigin adalah clothing brand lokal yang dirancang untuk skena style berdiri sejak 2024. ' +
+                              'Local Clothing Brand:\nThe Aborigin memudahkan para fashion enthusiast dan pecinta streetwear untuk mengekspresikan gaya mereka dengan desain pakaian otentik dan berkualitas. ' +
+                              'Dengan The Aborigin, Anda dapat menemukan koleksi unik yang mencerminkan kepribadian Anda, cocok untuk berbagai aktivitas, mulai dari hangout santai, acara komunitas, hingga gaya sehari-hari yang berkelas. ' +
+                              'Mengapa harus Aborigin?\n- Kaos yang vintage dan cozy\n- Simple dan Elegan\n- Ramah dikantong pelajar terkhusus mahasiswa';
+            break;
+          case 2:
+            titleText = 'Lezatnya Binary Bite';
+            descriptionText = 'Binary Bite adalah usaha kuliner yang berfokus pada pembuatan Brownies dan Cookies Kering dengan cita rasa yang menggugah selera. ' +
+                      'Kelezatan dalam Setiap Gigitan:\nBinary Bite menghadirkan pengalaman menikmati camilan yang dibuat dengan bahan-bahan berkualitas dan resep yang telah teruji. ' +
+                      'Dengan kombinasi tekstur yang sempurna dan rasa yang memanjakan lidah, produk kami cocok untuk menemani berbagai aktivitas Anda, mulai dari bersantai di rumah hingga sebagai hadiah istimewa untuk orang tersayang. ' +
+                      'Mengapa Memilih Binary Bite?\n- Brownies dengan rasa cokelat yang kaya\n- Cookies kering yang renyah dan menggoda\n- Dikemas dengan elegan, cocok untuk segala acara';
+            break;
+          default:
+            titleText = 'Deskripsi Tidak Ditemukan';
+            descriptionText = 'Deskripsi untuk gambar ini tidak ditemukan.';
+            break;
+        }
+  
+        // Mengubah judul dan deskripsi modal
+        document.getElementById('imageDescriptionModalLabel').textContent = titleText;
+        document.getElementById('imageDescription').textContent = descriptionText;
+  
+        // Menampilkan modal
+        new bootstrap.Modal(document.getElementById('imageDescriptionModal')).show();
+      });
+    });
+</script>
+
+
+  <script>
+    window.onload = function() {
+    const loadingScreen = document.getElementById("loading-screen");
+    const loadingBar = document.getElementById("loading-bar");
+    const logo = document.getElementById("logo");
+    
+    // Dapatkan lebar logo
+    const logoWidth = logo.offsetWidth;
+
+    // Set lebar loading bar sesuai dengan lebar logo
+    const loadingBarContainer = document.querySelector('.loading-bar-container');
+    loadingBarContainer.style.width = `${logoWidth}px`; // Menyesuaikan panjang loading bar dengan lebar logo
+
+    // Progres loading bar
+    setTimeout(() => {
+        loadingBar.style.width = "100%"; // Loading bar selesai dalam 3 detik
+    }, 100);
+
+    // Menghilangkan loading screen setelah loading selesai
+    setTimeout(() => {
+        loadingScreen.classList.add("fade-out");
+    }, 3000); // Animasi fade-out dimulai setelah loading bar selesai
+
+    // Menampilkan konten utama setelah animasi selesai
+    setTimeout(() => {
+        loadingScreen.style.display = "none"; // Menghapus loading screen
+        document.querySelector(".main-content").style.display = "block"; // Menampilkan konten utama
+    }, 4000); // Fade-out selesai dalam 1 detik
+    };
+
+    </script>
     <!-- <script src="../Script/cart-hover.js"></script> -->
 
     <script>
