--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -16,7 +16,7 @@
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/feather-icons"></script>
-    <link rel="stylesheet" href="../Style/style.css" />
+    <link rel="stylesheet" href="../style/style.css" />
     <style>
       body, html {
         height: 100%;
@@ -1066,13 +1066,11 @@
                             'Dengan The Aborigin, Anda dapat menemukan koleksi unik yang mencerminkan kepribadian Anda, cocok untuk berbagai aktivitas, mulai dari hangout santai, acara komunitas, hingga gaya sehari-hari yang berkelas. ' +
                             'Mengapa harus Aborigin?\n- Kaos yang vintage dan cozy\n- Simple dan Elegan\n- Ramah dikantong pelajar terkhusus mahasiswa';
           break;
-          case 2:
-            titleText = 'Lezatnya Binary Bite';
-            descriptionText = 'Binary Bite adalah usaha kuliner yang berfokus pada pembuatan Brownies dan Cookies Kering dengan cita rasa yang menggugah selera. ' +
-                      'Kelezatan dalam Setiap Gigitan:\nBinary Bite menghadirkan pengalaman menikmati camilan yang dibuat dengan bahan-bahan berkualitas dan resep yang telah teruji. ' +
-                      'Dengan kombinasi tekstur yang sempurna dan rasa yang memanjakan lidah, produk kami cocok untuk menemani berbagai aktivitas Anda, mulai dari bersantai di rumah hingga sebagai hadiah istimewa untuk orang tersayang. ' +
-                      'Mengapa Memilih Binary Bite?\n- Brownies dengan rasa cokelat yang kaya\n- Cookies kering yang renyah dan menggoda\n- Dikemas dengan elegan, cocok untuk segala acara';
-            break;
+        case 2:
+          titleText = 'Lezatnya Binary Bite';
+          descriptionText = 'Binary adalah representasi dasar dari data digital yang digunakan dalam berbagai aplikasi teknologi, termasuk pemrograman dan komputasi data. ' +
+                            'Dengan konsep Binary Bite, kami menghadirkan pengalaman kuliner yang terinspirasi oleh dunia digital. Nikmati berbagai hidangan lezat yang menggabungkan keunikan rasa dengan konsep inovatif yang menarik.';
+          break;
         default:
           titleText = 'Deskripsi Tidak Ditemukan';
           descriptionText = 'Deskripsi untuk gambar ini tidak ditemukan.';
