penyelarasan tampilan dan memperbaiki wishlist

--- a/Dashboard/cart-page.html
+++ b/Dashboard/cart-page.html
@@ -10,12 +10,10 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
     <style>
         .navbar {
-        background-color: white !important;
-        border-bottom: 1px solid #dee2e6;
-      }
-      .navbar-brand {
-        font-weight: 500;
-      }
+            background-color: #03045E !important;
+            border-bottom: 1px solid;
+            z-index: 1000;
+            }
         .cart-item {
             border-bottom: 1px solid #dee2e6;
             padding: 15px 0;
@@ -27,17 +25,18 @@
             font-size: 1.5rem;
             font-weight: bold;
         }
+
+        body{
+        background-color: #d9f5fb;
+      }
     </style>
 </head>
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">I-Click</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <a class="navbar-brand" href="index.html"><img src="../Images/group 1.png" alt="" style="width: 120px;"></a>
         </div>
     </nav>
 
