--- a/Dashboard/wishlist.html
+++ b/Dashboard/wishlist.html
@@ -8,26 +8,29 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://unpkg.com/feather-icons"></script>
+    <script src="../Script/wishlist.js"></script>
     <title>wishlist</title>
     <style>
-        .navbar {
-        background-color: white !important;
-        border-bottom: 1px solid #dee2e6;
-      }
+    .navbar {
+            background-color: #03045E !important;
+            border-bottom: 1px solid;
+            z-index: 1000;
+            }
       .navbar-brand {
         font-weight: 500;
+      }
+      body{
+        background-color: #d9f5fb;
       }
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">I-Click</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <a class="navbar-brand" href="index.html"><img src="../Images/group 1.png" alt="" style="width: 120px;"></a>
         </div>
     </nav>
+    
 
     <div class="container mt-5">
         <h1 class="text-center">Wishlist Saya</h1>
