--- a/Dashboard/cart-page.html
+++ b/Dashboard/cart-page.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
     <style>
         .navbar {
-        background-color: white !important;
+        background-color: #03045E !important;
         border-bottom: 1px solid #dee2e6;
       }
       .navbar-brand {
@@ -34,7 +32,8 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">I-Click</a>
+            <a class="navbar-brand" href="index.php"><img src="../Images/group 1.png" alt=""
+                style="width: 120px;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
                 <span class="navbar-toggler-icon"></span>
             </button>
