--- a/Dashboard/wishlist.html
+++ b/Dashboard/wishlist.html
@@ -11,25 +11,30 @@
     <title>wishlist</title>
     <style>
         .navbar {
-        background-color: white !important;
+        background-color: #03045E !important;
         border-bottom: 1px solid #dee2e6;
       }
       .navbar-brand {
         font-weight: 500;
+      }
+      .nav-link .bi-cart {
+        font-size: 24px;
+        margin-right: 15px;
       }
     </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">I-Click</a>
+            <a class="navbar-brand" href="index.html"<img src="../Images/group 1.png" alt=""
+            style="width: 120px;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
                 <span class="navbar-toggler-icon"></span>
             </button>
         </div>
     </nav>
 
-    <div class="container mt-5">
+    <div class="container my-5">
         <h1 class="text-center">Wishlist Saya</h1>
         <div id="wishlist-container" class="row"></div>
     </div>
