--- a/Dashboard/profile.html
+++ b/Dashboard/profile.html
@@ -8,7 +8,7 @@
     <title>Edit Profil</title>
     <style>
         .navbar {
-            background-color: white !important;
+            background-color: #03045E !important;
             border-bottom: 1px solid #dee2e6;
         }
         .navbar-brand {
@@ -42,7 +42,8 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">I-Click</a>
+            <a class="navbar-brand" href="index.html"><img src="../Images/group 1.png" alt=""
+                style="width: 120px;"></a>
         </div>
     </nav>
 
@@ -145,8 +146,5 @@
         };
     </script>
 </body>
-<<<<<<< HEAD
 </html>
-=======
 </html>
->>>>>>> d159032c2a63cb779b392c4c105d1d902892eeae
