--- a/Dashboard/cart-page.html
+++ b/Dashboard/cart-page.html
@@ -8,19 +8,16 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
     <style>
         .navbar {
-<<<<<<< HEAD
+
         background-color: #03045E !important;
         border-bottom: 1px solid #dee2e6;
       }
       .navbar-brand {
         font-weight: 500;
-      }
-=======
             background-color: #03045E !important;
             border-bottom: 1px solid;
             z-index: 1000;
-            }
->>>>>>> 9ab00a3c405dfccd24a5dd6f184a79fdbf5fb455
+      }
         .cart-item {
             border-bottom: 1px solid #dee2e6;
             padding: 15px 0;
@@ -43,15 +40,13 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-primary fixed-top">
         <div class="container">
-<<<<<<< HEAD
             <a class="navbar-brand" href="index.php"><img src="../Images/group 1.png" alt=""
                 style="width: 120px;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
                 <span class="navbar-toggler-icon"></span>
             </button>
-=======
-            <a class="navbar-brand" href="index.html"><img src="../Images/group 1.png" alt="" style="width: 120px;"></a>
->>>>>>> 9ab00a3c405dfccd24a5dd6f184a79fdbf5fb455
+            <a class="navbar-brand" href="index.php"><img src="../Images/group 1.png" alt="" style="width: 120px;"></a>
+
         </div>
     </nav>
 
