--- a/Dashboard/wishlist.html
+++ b/Dashboard/wishlist.html
@@ -33,6 +33,10 @@
         .card-body {
              min-height: 250px; /* Sesuaikan dengan kebutuhan */
         }
+        .wishlist-header {
+    margin-top: 80px; /* Sesuaikan jarak sesuai kebutuhan */
+  }
+
         </style>
         
 </head>
@@ -49,7 +53,7 @@
     
 
     <div class="container mt-5">
-        <h1 class="text-center">Wishlist Saya</h1>
+        <h1 class="text-center wishlist-header">Wishlist Saya</h1>
         <div id="wishlist-container" class="row"></div>
     </div>
 
