--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -1018,25 +1018,34 @@
       </div>
     </section>
 
-    <footer  class="Footer" style="background-color: #03045E;">
+    <footer class="Footer">
       <div>
         <div>
           <div>
             <h2>FOLLOW US</h2>
-              <div>
-              <i class="fa-brands fa-instagram"></i>
-              <i class="fa-brands fa-twitter"></i>
-              <i class="fa-brands fa-linkedin"></i>
-              </div>
-              <p>✉ Iclick@gmail.com</p>
+            <div>
+              <!-- Link untuk Instagram, Twitter, dan LinkedIn -->
+              <a href="https://www.instagram.com/3didaw.co/" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+              <a href="https://www.instagram.com/theaborigin?igsh=b3lmMGtia3R3ejlk" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+              <a href="https://www.instagram.com/binarybite._?igsh=amtrdXg3dTU5aDJt" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+              </a>
+            </div>
+            <p>✉ Iclick@gmail.com</p>
           </div>
+        </div>
         <div class="row">
-          <div class=" text-center">
+          <div class="text-center">
             <p style="margin-top: 0px;">&copy; 2024 I-Click. All rights reserved. | Temukan berbagai produk berkualitas dengan harga terbaik.</p>
           </div>
         </div>
       </div>
     </footer>
+    
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
